Add more details to the home page

--- a/styles/global.css
+++ b/styles/global.css
@@ -90,7 +90,7 @@ footer {
 
 .footer-contact i {
     font-size: 72px;
-    padding: 0 20px 0 20px;
+    margin: 0 20px 0 20px;
 }
 
 .footer-contact a {
