Update the hero section

--- a/styles/global.css
+++ b/styles/global.css
@@ -1,12 +1,12 @@
 body {
-    margin: 0px;
-    padding: 0px;
+  margin: 0px;
+  padding: 0px;
 
-    background-color: #0B090A;
-    color: white;
+  background-color: #0b090a;
+  color: white;
 
-    font-size: 20px;
-    font-family: 'DejaVuSansMono', monospace;    
+  font-size: 20px;
+  font-family: "DejaVuSansMono", monospace;
 }
 
 /* /////////// */
@@ -14,51 +14,46 @@ body {
 /* ///////// */
 
 header {
-    position: relative;
-    display: flex;
-    justify-content: space-between;
+  position: relative;
+  display: flex;
+  justify-content: space-between;
 
-    top: 50%;
-    padding: 15px;
+  top: 50%;
+  padding: 15px;
 }
 
 .nav-bar {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 
-    width: 100%;
+  width: 100%;
 }
 
 #logo {
-    font-size: 24px;
-    margin: 15px;
+  font-size: 24px;
+  margin: 15px;
 }
 
-nav ul {  
-    list-style: none;
+nav ul {
+  list-style: none;
 }
- 
+
 nav li {
-    display: inline;
-    margin: 0 15px 0 15px;
-}
-
-#current-page {
-    text-decoration: underline;
-    text-decoration-color: #E5383B;
-    text-underline-offset: 10px;
+  display: inline;
+  margin: 0 15px 0 15px;
 }
 
 nav a {
-    text-decoration: none;
-    color: white;
-    margin: 0 20px 0 20px;
+  text-decoration: none;
+  color: white;
+  margin: 0 20px 0 20px;
 }
 
 nav a:not(#current-page):hover {
-    transition-duration: 0.5s;
-    color: #E5383B;
+  transition-duration: 0.8s;
+  text-decoration: underline 2px solid red;
+  text-underline-offset: 5px;
 }
 
 /* /////////// */
@@ -66,62 +61,65 @@ nav a:not(#current-page):hover {
 /* ///////// */
 
 footer {
-    text-align: center;
-    height: 310px;
+  text-align: center;
+  height: 310px;
 }
 
 #footer-socials {
-    font-size: 56px;
-    text-decoration: underline;
-    text-underline-offset: 10px;
+  font-size: 56px;
+  text-decoration: underline;
+  text-underline-offset: 10px;
 }
 
 .footer-content-wrapper {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .footer-contact {
-    width: 60%;
-    padding: 15px;
-    margin: 20px;
+  width: 60%;
+  padding: 15px;
+  margin: 20px;
 }
 
 .footer-contact i {
-    font-size: 72px;
-    margin: 0 20px 0 20px;
+  font-size: 72px;
+  margin: 0 20px 0 20px;
 }
 
 .footer-contact a {
-    text-decoration: none;
-    color: white;
+  text-decoration: none;
+  color: white;
 }
 
 .footer-contact a:hover {
-    transition: 0.5s;
-    color: #E5383B;
+  transition: 0.5s;
+  color: #e5383b;
 }
 
-.footer-previous, .footer-next {
-    width: 20%;
-    padding: 15px;
+.footer-previous,
+.footer-next {
+  width: 20%;
+  padding: 15px;
 }
 
-.footer-previous p, .footer-next p {
-    border: white 2px solid;
-    padding: 15px;
+.footer-previous p,
+.footer-next p {
+  border: white 2px solid;
+  padding: 15px;
 }
 
-.footer-previous a, .footer-next a{
-    text-decoration: none;
-    color: white;
+.footer-previous a,
+.footer-next a {
+  text-decoration: none;
+  color: white;
 }
 
 #footer-copyright {
-    font-size: 16px;
-    color: #D3D3D3;
-    padding: 15px;
+  font-size: 16px;
+  color: #d3d3d3;
+  padding: 15px;
 }
 
 /* /////////////// */
@@ -129,14 +127,15 @@ footer {
 /* ///////////// */
 
 ::-webkit-scrollbar {
-    width: 10px;
+  width: 10px;
 }
 
 ::-webkit-scrollbar-thumb {
-    background: #D3D3D3;
-    border-radius: 5px;
+  background: #d3d3d3;
+  border-radius: 5px;
 }
 
 ::-webkit-scrollbar-track {
-    background: white;
+  background: white;
 }
+
