--- a/views/index.html
+++ b/views/index.html
@@ -20,19 +20,19 @@
     <title>Portfolio</title>
   </head>
   <body>
-    <div class="hero-section">
-      <header>
-        <div class="nav-bar">
-          <p id="logo"><> Tyson Jenkins</p>
-          <nav>
-            <ul>
-              <li><a href="index.html">Home</a></li>
-              <li><a href="#projects">Projects</a></li>
-            </ul>
-          </nav>
-        </div>
-      </header>
-      <main>
+    <header>
+      <div class="nav-bar">
+        <p id="logo"><> Tyson Jenkins</p>
+        <nav>
+          <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="#projects">Projects</a></li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+    <main>
+      <div class="hero-section">
         <div class="hero-section-item">
           <div class="hero-title">
             <h1 id="hero-name">Tyson Jenkins</h1>
@@ -47,16 +47,33 @@
             ></a>
           </div>
         </div>
-        <div class="hero-section-item"></div>
-      </main>
-    </div>
+        <div class="hero-section-item">
+          <div class="about-terminal">
+            <div class="about-window">
+              <p>> cat aboutme.txt</p>
+              <p># Location</p>
+              <p>Salt Lake City, UT</p>
+              <br />
+              <p># Interests</p>
+              <p>["gaming", "manga", "pc building"]</p>
+              <br />
+              <p># Skills</p>
+              <p>["HTML/CSS", "JavaScript", "C#", "C++", "Java", "Git"]</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </main>
     <section>
       <h1 id="projects">Projects</h1>
       <div class="projects">
         <div class="project-item">
           <h1>2D Game Engine</h1>
-          <h3>A 2D game engine written in c++ using SDL library for common tasks such as displaying points</h3>
-          <img src="../images/rust.png"></a>
+          <h3>
+            A 2D game engine written in c++ using SDL library for common tasks
+            such as displaying points
+          </h3>
+          <img src="../images/rust.png" />
           <div class="technologies">
             <div class="tech">
               <p>C++</p>
@@ -66,8 +83,11 @@
         </div>
         <div class="project-item">
           <h1>Schlatt Dungeon</h1>
-          <h3>A rpg game made in Java using the lib-gdx library for displaying graphics</h3>
-          <img src="../images/rust.png"></a>
+          <h3>
+            A rpg game made in Java using the lib-gdx library for displaying
+            graphics
+          </h3>
+          <img src="../images/rust.png" />
           <div class="technologies">
             <div class="tech">
               <p>Java</p>
@@ -75,38 +95,6 @@
             </div>
           </div>
         </div>
-      </div>
-    </section>
-    <section>
-      <div class="about">
-        <div class="about-item">
-          <h1>About Me</h1>
-          <p>
-            My name is Tyson and I attend Neumont College of Computer Science. I
-          </p>
-        </div>
-        <div class="about-item">
-          <img src="images/TODO" />
-        </div>
-      </div>
-    </section>
-    <section>
-      <div class="skill">
-        <div class="skill-item">
-          <h1>Skills</h1>
-          <p>Stuff goes here</p>
-        </div>
-        <div class="skill-item"></div>
-      </div>
-    </section>
-    <section>
-      <div class="progress">
-        <div class="progress-item">
-          <h1>What I am working on...</h1>
-          <h3 id="title">title</h3>
-          <h5 id="desc">desc</h5>
-        </div>
-        <div class="progress-item"></div>
       </div>
     </section>
     <footer>
