--- a/styles/index.css
+++ b/styles/index.css
@@ -3,87 +3,29 @@ section {
   background-color: black;
 }
 
-/* ///////////// */
-/* Hero Section */
-/* /////////// */
-
-@keyframes slideshow {
-  0% {
-    left: 0;
-  }
-  100% {
-    right: 100%;
-  }
-}
-
-.hero-section {
-  position: relative;
-  height: 100%;
-  width: 100%;
-}
-
-.hero-section::before {
-  content: "";
-  position: absolute;
-  height: 100%;
-  width: 100%;
-  opacity: 0.2;
-  background-image: url(../images/rpg.png);
-  background-size: cover;
-}
-
-.hero-section1 {
-  position: relative;
-  height: 100%;
-  width: 100%;
-}
-
-.hero-section1::before {
-  content: "";
-  position: absolute;
-  height: 100%;
-  width: 100%;
-  opacity: 0.2;
-  background-image: url(../images/handdetection.png);
-  background-size: cover;
-}
-
-.hero-section2 {
-  position: relative;
-  height: 100%;
-  width: 100%;
-}
-
-.hero-section2::before {
-  content: "";
-  position: absolute;
-  height: 100%;
-  width: 100%;
-  opacity: 0.2;
-  background-image: url(../images/translator.png);
-  background-size: cover;
-}
-
 /* //////////// */
 /*  Hero Body  */
 /* ////////// */
 
 main {
-  position: relative;
   display: flex;
+  justify-content: space-evenly;
   align-items: center;
 
-  height: 95vh;
+  height: 100vh;
+}
+
+.hero-section {
+  display: flex;
+
+  border: 3px solid red;
+  border-radius: 5px;
 }
 
 .hero-section-item {
-  display: flex;
-  flex-direction: column;
-
-  width: 40%;
-  height: 50%;
-
-  margin: auto;
+  height: fit-content;
+  padding: 15px;
+  margin: 15px;
 }
 
 #hero-name {
