--- a/views/index.html
+++ b/views/index.html
@@ -50,6 +50,7 @@
         <div class="hero-section-item">
           <div class="about-terminal">
             <div class="about-window">
+              <p>~/tysonjenkins.codes</p>
               <p>> cat aboutme.txt</p>
               <p># Location</p>
               <p>Salt Lake City, UT</p>
@@ -72,12 +73,10 @@
             A game engine used for making 2D games, using C++ and the SDL
             library
           </h3>
-          <img src="../images/rust.png" />
+          <img src="../images/game_engine.png" />
           <div class="technologies">
-            <div class="tech">
-              <p>C++</p>
-              <p>SDL</p>
-            </div>
+            <p>C++</p>
+            <p>SDL</p>
           </div>
           <div class="demonstration">
             <a href="#">Blog</a>
@@ -85,24 +84,22 @@
           </div>
         </div>
         <div class="project-item">
-          <h1>Schlatt Dungeon</h1>
+          <h2>Schlatt Dungeon</h2>
           <h3>
             A fun 2D rpg game made using Java as well as the lib-gdx library for
             displaying the 2D graphics
           </h3>
-          <img src="../images/rust.png" />
+          <img src="../images/rpg.png" />
           <div class="technologies">
-            <div class="tech">
-              <p>Java</p>
-              <p>Lib-gdx</p>
-            </div>
+            <p>Java</p>
+            <p>Lib-gdx</p>
           </div>
           <div class="demonstration">
             <a href="#">Blog</a>
             <a href="https://github.com/tjenkins/JshlattDungeon">Code</a>
           </div>
         </div>
-        <a href="#">More Projects</a>
+        <a id="more-projects" href="#">More Projects</a>
       </div>
     </section>
     <footer>
