--- a/styles/global.css
+++ b/styles/global.css
@@ -8,7 +8,7 @@
 }
 
 body {
-  /* font-family: "DejaVu Sans Mono", monospace; */
+  font-family: "DejaVu Sans Mono", monospace;
   background-color: var(--primary-bg-color);
   color: var(--text-color-primary);
   line-height: 1.6;
