--- a/styles/global.css
+++ b/styles/global.css
@@ -8,13 +8,13 @@
 }
 
 /* Social Icons */
-.icon i {
+.icon {
   text-decoration: none;
   color: white;
   font-size: 24px;
 }
 
-.icon i:hover {
+.icon :hover {
   color: var(--text-color-accent);
 }
 
