Change project item size

--- a/styles/global.css
+++ b/styles/global.css
@@ -268,7 +268,7 @@ main {
 
 .projects {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(25%, 1fr));
   gap: 2rem;
   margin-bottom: 2rem;
 }
